gameArea layout is ongoing

--- a/index.html
+++ b/index.html
@@ -146,8 +146,120 @@
 
           </div>
 
+          <!-- Gaming Area -->
+          <div class="col-md-7 main-middle">
 
-          <div class="col-md-7 main-middle"></div>
+            <div class="img">
+              <img src="https://www.pinnacle.com/Cms_Data/Contents/Guestzhtw/Media/1AFFI/update/UWebsite-Desktop-Generic-USP-banner-CH-TR.jpg" alt="messi Photo">
+            </div>
+
+            <div class="playing-games">
+
+              <div><h6>體育博彩-賽中盤</h6></div>
+
+              <div class='playing-menu'>
+                <div>O足球</div><div>O足球</div><div>O足球</div>
+              </div>
+
+              <ul class='play-list'>
+                <li>
+
+                  <div class="row gamgin-title">
+                    <div class="col-md-3">歐洲足協 - 歐羅巴聯賽</div>
+                    <div class="col-md-3">1X2</div>
+                    <div class="col-md-3">讓分盤</div>
+                    <div class="col-md-3">大盤 小盤</div>
+                  </div>
+
+                  <div class="row place-area">
+                    <div class="col-md-3">
+
+                      <div>
+                        <span>流浪者</span>
+                        <span>0</span>
+                      </div>
+                      <div>
+                        <span>藝大師</span>
+                        <span>0</span>
+                      </div>
+                      <div>上半場-46'</div>
+
+                    </div>
+
+                    <div class="col-md-3">
+                      <button>1.560</button>
+                      <button>5.000</button>
+                      <button>1.242</button>
+                    </div>
+
+                    <div class="col-md-3">
+
+                      <div>
+                        <span>+1.5</span>
+                        <span>1.925</span>
+                      </div>
+
+                      <div>
+                        <span>+1.5</span>
+                        <span>1.925</span>
+                      </div>
+
+                      <div>
+                        ^
+                      </div>
+
+                    </div>
+
+
+                    <div class="col-md-3">
+
+                      <div class="col-md-3">
+
+                        <div>
+                          <span>+1.5</span>
+                          <span>1.925</span>
+                        </div>
+  
+                        <div>
+                          <span>+1.5</span>
+                          <span>1.925</span>
+                        </div>
+  
+                        <div>
+                          |
+                        </div>
+
+                        <div>
+                          +31>
+                        </div>
+  
+                      </div>
+
+                    </div>
+                  </div>
+
+
+
+
+
+                  
+
+
+
+
+
+
+
+                </li>
+              </ul>
+
+
+            </div>
+
+          
+
+
+          </div>
           <div class="col-md-3 main-right"></div>
         </div>
       </div>
