improving layout for mobile and buttons

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                           </button>
                         </div>
 
-                        <div>
+                        <div class='bigsmall-time'>
                           +31>
                         </div>
 
@@ -371,7 +371,7 @@
                           </button>
                         </div>
 
-                        <div>
+                        <div class='bigsmall-time'>
                           {{item.times.time2}}> 
                         </div>
 
@@ -535,7 +535,7 @@
               scores: {score1:2, score2:1},
               odds:{rate1:2.035, rate2: 2.122, rate3: 2.552},
               cent:{cent1:[+1.500, 1.220], cent2:['+1.0', 1.900]},
-              bigSmall:{ rate1:[+1.1, 1.100], rate2:['+2.5', 2.900]},
+              bigSmall:{ rate1:[+1.1, 1.182], rate2:['+2.5', 2.988]},
               times:{time1:"上半場-32'", time2: '+46'}
             },
 
@@ -544,7 +544,7 @@
               scores: {score1:0, score2:1},
               odds:{rate1:2.332, rate2: 3.222, rate3: 3.555},
               cent:{cent1:[+2.220, 1.952], cent2:['+1.0', 1.950]},
-              bigSmall:{ rate1:[+1.5, 1.952], rate2:['+1.5', 0.900]},
+              bigSmall:{ rate1:[+1.5, 1.952], rate2:['+1.5', 0.955]},
               times:{time1:"上半場-22'", time2: '+36'}
             },
 
@@ -553,7 +553,7 @@
               scores: {score1:2, score2:1},
               odds:{rate1:1.352, rate2: 3.225, rate3: 3.558},
               cent:{cent1:[+1.5, 1.952], cent2:['+1.0', 1.900]},
-              bigSmall:{ rate1:[+1.5, 1.952], rate2:['+1.5', 1.200]},
+              bigSmall:{ rate1:[+1.5, 1.952], rate2:['+1.5', 1.286]},
               times:{time1:"下半場-22'", time2: '+46'}
             },
 
@@ -562,7 +562,7 @@
               scores: {score1:1, score2:1},
               odds:{rate1:2.532, rate2: 3.152, rate3: 3.558},
               cent:{cent1:[+1.5, 1.952], cent2:['+1.0', 1.900]},
-              bigSmall:{ rate1:[+1.5, 1.952], rate2:['+2.5', 2.900]},
+              bigSmall:{ rate1:[+1.5, 1.952], rate2:['+2.5', 2.955]},
               times:{time1:"下半場-50'", time2: '+16'}
             },
 
@@ -571,7 +571,7 @@
               scores: {score1:3, score2:1},
               odds:{rate1:1.202, rate2: 1.228, rate3: 2.555},
               cent:{cent1:[+1.5, 1.952], cent2:['+1.0', 1.900]},
-              bigSmall:{ rate1:[+1.5, 1.952], rate2:['+1.5', 1.200]},
+              bigSmall:{ rate1:[+1.5, 1.952], rate2:['+1.5', 1.586]},
               times:{time1:"上半場-56''", time2: '+06'}
             }
 
